register con cliente

--- a/piedra_papel_tijera/cliente/login.html
+++ b/piedra_papel_tijera/cliente/login.html
@@ -58,6 +58,7 @@
       <input type="password" id="password" placeholder="Contraseña" required />
 
       <button type="submit">Entrar</button>
+      <a href="registro.html">No tienes cuenta?</a>
       <div id="mensaje"></div>
     </form>
 
