--- a/piedra_papel_tijera/cliente/login.html
+++ b/piedra_papel_tijera/cliente/login.html
@@ -2,106 +2,148 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Login Piedra Papel Tijera</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Iniciar Sesión - Piedra Papel Tijera</title>
     <style>
       body {
-        font-family: sans-serif;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         display: flex;
         justify-content: center;
-        margin-top: 50px;
-        background-color: #222;
-        color: white;
+        align-items: center;
+        height: 100vh;
+        background-color: #2c3e50;
+        margin: 0;
       }
-      form {
-        background: #333;
-        padding: 20px;
-        border-radius: 8px;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        width: 300px;
+      .card {
+        background: white;
+        padding: 2.5rem;
+        border-radius: 10px;
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+        width: 350px;
       }
-      input {
-        padding: 10px;
-        border-radius: 4px;
-        border: none;
+      h2 {
+        text-align: center;
+        color: #333;
+        margin-bottom: 1.5rem;
       }
-      button {
-        padding: 10px;
-        background: #007bff;
-        color: white;
-        border: none;
-        cursor: pointer;
-        border-radius: 4px;
+      .form-group {
+        margin-bottom: 15px;
+      }
+      label {
+        display: block;
+        margin-bottom: 5px;
+        color: #666;
         font-weight: bold;
       }
-      button:hover {
-        background: #0056b3;
+      input {
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        font-size: 16px;
       }
-      #mensaje {
-        margin-top: 10px;
+      button {
+        width: 100%;
+        padding: 12px;
+        background-color: #27ae60;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: bold;
+        transition: background 0.3s;
+      }
+      button:hover {
+        background-color: #219150;
+      }
+      .error {
+        color: #e74c3c;
         text-align: center;
-        color: yellow;
+        margin-top: 15px;
+        font-size: 0.9em;
+        display: none;
+      }
+      .link {
+        text-align: center;
+        margin-top: 20px;
+        font-size: 0.9em;
+      }
+      a {
+        color: #3498db;
+        text-decoration: none;
       }
     </style>
   </head>
   <body>
-    <form id="loginForm">
-      <h2 style="text-align: center">🎮 Acceso</h2>
+    <div class="card">
+      <h2>Bienvenido</h2>
+      <form id="loginForm">
+        <div class="form-group">
+          <label for="identificador">Usuario o Email</label>
+          <input
+            type="text"
+            id="identificador"
+            name="identificador"
+            required
+            placeholder="Ej: goku o goku@mail.com"
+          />
+        </div>
 
-      <input
-        type="text"
-        id="identificador"
-        placeholder="Email o Nickname"
-        required
-      />
-      <input type="password" id="password" placeholder="Contraseña" required />
+        <div class="form-group">
+          <label for="password">Contraseña</label>
+          <input type="password" id="password" name="password" required />
+        </div>
 
-      <button type="submit">Entrar</button>
-      <a href="registro.html">No tienes cuenta?</a>
-      <div id="mensaje"></div>
-    </form>
+        <button type="submit">Entrar</button>
+      </form>
+
+      <p id="mensajeError" class="error"></p>
+
+      <div class="link">
+        ¿No tienes cuenta? <a href="registro.html">Regístrate aquí</a>
+      </div>
+    </div>
 
     <script>
       const form = document.getElementById("loginForm");
-      const mensajeDiv = document.getElementById("mensaje");
+      const mensajeError = document.getElementById("mensajeError");
 
       form.addEventListener("submit", async (e) => {
-        e.preventDefault(); // Evita que la página se recargue
+        e.preventDefault();
+        mensajeError.style.display = "none";
 
-        // 1. Recoger datos
         const identificador = document.getElementById("identificador").value;
         const password = document.getElementById("password").value;
 
         try {
-          // 2. Enviar al Backend (Fetch)
-          const respuesta = await fetch("http://localhost:8000/login", {
+          // Hacemos la petición a tu servidor nuevo
+          const response = await fetch("http://localhost:8000/login", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ identificador, password }),
           });
 
-          const datos = await respuesta.json();
+          const data = await response.json();
 
-          if (respuesta.ok) {
-            // 3. ¡ÉXITO! Guardamos el token
-            sessionStorage.setItem("jwt_token", datos.token);
-            sessionStorage.setItem("user_info", JSON.stringify(datos.usuario));
+          if (response.ok) {
+            // ¡Login correcto!
+            // 1. Guardamos el token en el navegador
+            localStorage.setItem("token", data.token);
+            localStorage.setItem("usuario", JSON.stringify(data.usuario));
 
-            mensajeDiv.style.color = "lightgreen";
-            mensajeDiv.innerText = "¡Login Correcto! Token guardado.";
-
-            // Aquí redirigiríamos al juego (lobby.html)
-            console.log("Token:", datos.token);
-            setTimeout(() => {
-              alert("¡Vamos a jugar!");
-            }, 500);
+            // 2. Redirigimos al Lobby (vamos a crear este archivo luego)
+            window.location.href = "lobby.html";
           } else {
-            mensajeDiv.style.color = "red";
-            mensajeDiv.innerText = datos.message || "Error al entrar";
+            // Error (contraseña mal, usuario no existe...)
+            mensajeError.innerText = data.error || "Credenciales incorrectas";
+            mensajeError.style.display = "block";
           }
         } catch (error) {
-          mensajeDiv.innerText = "Error de conexión con el servidor";
+          console.error(error);
+          mensajeError.innerText = "Error al conectar con el servidor";
+          mensajeError.style.display = "block";
         }
       });
     </script>
