nickname en pagina

--- a/piedra_papel_tijera/cliente/lobby.html
+++ b/piedra_papel_tijera/cliente/lobby.html
@@ -137,7 +137,8 @@
         <h1>Sala de Juegos</h1>
         <div class="user-panel">
           <span id="welcomeMsg"
-            >Hola, <span class="username">Cargando...</span></span
+            >Hola,
+            <span class="username" id="nombreUsuario">Cargando...</span></span
           >
           <button id="btnLogout" class="btn-logout">Salir</button>
         </div>
@@ -166,6 +167,6 @@
         </div>
       </div>
     </div>
-    <script src="lobby.js"></script>
+    <script type="module" src="lobby.js"></script>
   </body>
 </html>
