vite + funciones front

--- a/piedra_papel_tijera/cliente-vite/lobby.html
+++ b/piedra_papel_tijera/cliente-vite/lobby.html
@@ -167,6 +167,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="lobby.js"></script>
+    <script type="module" src="./src/lobby.js"></script>
   </body>
 </html>
