logica del juego

--- a/piedra_papel_tijera/cliente-vite/lobby.html
+++ b/piedra_papel_tijera/cliente-vite/lobby.html
@@ -149,23 +149,7 @@
       </button>
 
       <h3>Partidas Disponibles</h3>
-      <div id="listaPartidas" class="games-list">
-        <div class="game-card">
-          <div class="card-header">
-            <span>Partida #42</span>
-          </div>
-          <div class="status status-waiting">🟢Esperando Rival</div>
-          <button class="btn-join">Unirse</button>
-        </div>
-
-        <div class="game-card">
-          <div class="card-header">
-            <span>Partida #43</span>
-          </div>
-          <div class="status status-playing">🔴Jugando</div>
-          <button class="btn-full" disabled>Completa</button>
-        </div>
-      </div>
+      <div id="listaPartidas" class="games-list"></div>
     </div>
     <script type="module" src="./src/lobby.js"></script>
   </body>
