--- a/piedra_papel_tijera/cliente-vite/juego.html
+++ b/piedra_papel_tijera/cliente-vite/juego.html
@@ -72,7 +72,21 @@
       <h1 id="tituloPartida">Partida #<span id="idPartida">--</span></h1>
 
       <div class="marcador">
-        <span id="puntosJ1">0</span> - <span id="puntosJ2">0</span>
+        <div
+          style="
+            font-size: 0.5em;
+            display: flex;
+            justify-content: space-between;
+            width: 150px;
+            margin: 0 auto;
+            margin-bottom: 10px;
+          "
+        >
+          <span id="labelJ1">Jugador 1</span>
+          <span id="labelJ2">Jugador 2</span>
+        </div>
+
+        <div><span id="puntosJ1">0</span> - <span id="puntosJ2">0</span></div>
       </div>
 
       <div id="estadoJuego" class="info">Esperando información...</div>
