nickname cuando soy el usuario

--- a/piedra_papel_tijera/cliente-vite/juego.html
+++ b/piedra_papel_tijera/cliente-vite/juego.html
@@ -80,6 +80,7 @@
             width: 150px;
             margin: 0 auto;
             margin-bottom: 10px;
+            width: 80%;
           "
         >
           <span id="labelJ1">Jugador 1</span>
