controlador cpu y boton en lobby

--- a/piedra_papel_tijera/cliente-vite/lobby.html
+++ b/piedra_papel_tijera/cliente-vite/lobby.html
@@ -147,6 +147,13 @@
       <button id="btnCrearPartida" class="btn-create">
         + Crear Nueva Partida
       </button>
+      <button
+        id="btnJugarCpu"
+        class="btn-create"
+        style="background-color: #a1a1a13f; margin-top: 10px"
+      >
+        Jugar vs CPU
+      </button>
 
       <h3>Partidas Disponibles</h3>
       <div id="listaPartidas" class="games-list"></div>
