--- a/piedra_papel_tijera/cliente-vite/lobby.html
+++ b/piedra_papel_tijera/cliente-vite/lobby.html
@@ -138,8 +138,8 @@
         <div class="user-panel">
           <span id="welcomeMsg"
             >Hola,
-            <span class="username" id="nombreUsuario">Cargando...</span></span
-          >
+            <a href="perfil.html" style="text-decoration: none;"><span class="username" id="nombreUsuario">Cargando...</span></span
+          ></a>
           <button id="btnLogout" class="btn-logout">Salir</button>
         </div>
       </header>
