--- a/piedra_papel_tijera/cliente-vite/perfil.html
+++ b/piedra_papel_tijera/cliente-vite/perfil.html
@@ -72,7 +72,7 @@
       </div>
 
       <div class="dato">
-        <span class="label">Email</span>
+        <span class="label">Contraseña</span>
         <span id="p_password" class="valor">Cargando...</span>
       </div>
 
